--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -51,7 +51,7 @@ simplepage.create_assignment2=Create new assignment using Assignment 2
 simplepage.create_blti=Manage or Install External Tools
 simplepage.create_quiz=Create new quiz
 simplepage.create_samigo=Create new quiz using Tests and Quizzes
-simplepage.create_mneme=Create new quiz using Tasks, Tests and Surveys
+simplepage.create_mneme=Create new quiz using Tests
 simplepage.create_topic=Create new forum topic
 simplepage.create_forums=Create new topic using Forums
 simplepage.create_jforum=Create new topic using Discussions and Private Messages
