WL-4144 Added 'Upload new version' funstionality in Lessons tool.
Modified 'AddMultimedia' method of SimplePageBean class to add new verison
of old resource.Added new dialog for 'Upload new version' in ShowPage.html

--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -637,3 +637,10 @@ simplepage.addfolder.tooltip=Add a Resources folder and its contents.
 simplepage.choose.folder=Choose your Folder
 simplepage.active-folder=Selected Folder
 simplepage.folder.error=No folder selected , please choose one.
+simplepage.change-resource-version=Upload New Version
+simplepage.upload-message=Upload New Version Now
+simplepage.resource-name-label=Original File Name:
+simplepage.replace-different-resource=The file you have selected does not match the original file name.
+simplepage.resource-type-label=File Type:
+simplepage.change-resource-version-instruction=To replace the current version of this file with an updated version, select your updated file here.
+simplepage.resource-version-title-notblank=Please choose the file to attach.
