--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -644,3 +644,11 @@ simplepage.replace-different-resource=The file you have selected does not match 
 simplepage.resource-type-label=File Type:
 simplepage.change-resource-version-instruction=To replace the current version of this file with an updated version, select your updated file here.
 simplepage.resource-version-title-notblank=Please choose the file to attach.
+simplepage.twitter=Embed Twitter Feed
+simplepage.twitter-descrip=Add a twitter feed to this page, e.g. departmental, subject or personal.
+simplepage.twitter-username=Twitter Username, e.g. @OxfordWebLearn
+simplepage.number-dropdown-label=#Number of Tweets:
+simplepage.twitter-name-notblank=Please supply username.
+simplepage.edit-title.twitter=Edit Twitter timeline
+simplepage.height-error-message=Numbers only
+simplepage.twitter.height_label=Height of display box (in pixels)
