--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -644,6 +644,14 @@ simplepage.replace-different-resource=The file you have selected does not match 
 simplepage.resource-type-label=File Type:
 simplepage.change-resource-version-instruction=To replace the current version of this file with an updated version, select your updated file here.
 simplepage.resource-version-title-notblank=Please choose the file to attach.
+simplepage.forumSummaryLinkText=Embed Forums Conversations
+simplepage.forum-summary-descrip=Display latest conversations
+simplepage.forum-summary.height_label=Height of display box (in pixels)
+simplepage.forum-number-dropdown-label=Specify number of conversations
+simplepage.height-error-message=Numbers only
+simplepage.edit-title.forum-summary=Edit Forum summary
+simplepage.forum-summary-no-message=There are currently no conversations to display.
+simplepage.forum-header-title=Latest forum posts
 simplepage.announcementsLinkText=Embed Announcements
 simplepage.announcements-descrip=Display latest announcements
 simplepage.no_announcements_tool=There is no Announcements tool in the site.
