WL-4274 Created calendar component for Lessons page.
New option 'Embed Calendar' is added in the list on Lessons page.
SimplePageItem of type 'Calendar' created for calendar widget.
Calendar shows events from all the merged calendars in the Lessons tool.
If event has hyperlink as description they are shown as hyperlink, same
applies for embed code.

--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -644,6 +644,15 @@ simplepage.replace-different-resource=The file you have selected does not match 
 simplepage.resource-type-label=File Type:
 simplepage.change-resource-version-instruction=To replace the current version of this file with an updated version, select your updated file here.
 simplepage.resource-version-title-notblank=Please choose the file to attach.
+simplepage.calendarLinkText=Embed Calendar
+simplepage.calendar-descrip=Display all events in calendar.
+simplepage.edit-title.calendar=Edit Calendar
+simplepage.startTime=Start Time:
+simplepage.endTime=End Time:
+simplepage.calendar-more-info=Full details...
+simplepage.siteName=Site:
+simplepage.description=Description:
+simplepage.eventType=Event Type:
 simplepage.forumSummaryLinkText=Embed Forums Conversations
 simplepage.forum-summary-descrip=Display latest conversations
 simplepage.forum-summary.height_label=Height of display box (in pixels)
