WL-4274 Attachments will be displayed for the events in Calendar widget.
On event click in calendar widget for lessons will now display attachments
if any present. calendar will resize with the screen resizing.

--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -651,6 +651,7 @@ simplepage.startTime=Start Time:
 simplepage.endTime=End Time:
 simplepage.calendar-more-info=Full details...
 simplepage.siteName=Site:
+simplepage.eventAttachments=Attachments:
 simplepage.description=Description:
 simplepage.eventType=Event Type:
 simplepage.forumSummaryLinkText=Embed Forums Conversations
