--- a/tool/src/resources/messages.properties
+++ b/tool/src/resources/messages.properties
@@ -679,3 +679,4 @@ simplepage.height-error-message=Numbers only
 simplepage.twitter.height_label=Height of display box (in pixels)
 simplepage.announcements-error-message=Error in adding announcements:
 simplepage.forum-summary-error-message=Error in adding forum summary:
+simplepage.announcements-header-title=Announcements
